# routes/index.js
@@ -2,6 +2,7 @@ const router = require('express').Router()
 const booksRoute = require('./booksRoute')
 const usersRoute = require('./usersRoute')
 const readlistRoute = require('./readlistRoute')
+const reviewRoute = require('./reviewRoute')
 
 router.get('/', (_, res) => {
   res.send('Hello from the root route!')
@@ -11,5 +12,6 @@ router.use('/', require('./swagger'))
 router.use('/books', booksRoute)
 router.use('/users', usersRoute)
 router.use('/readlist', readlistRoute)
+router.use('/reviews', reviewRoute)
 
 module.exports = router
